test/runnable/covariance_contravariance.cx
module covariance_contravariance;

macro import cx.macros.assert;

class A {
    this() { }
    A get() { return new A; }
    void set(B b) { }
}

class B : A {
    this() { }
    override B get() { return new B; }
    override void set(A a) { }
}

void main() {
    assert((new B()).get().instanceOf(A));
}
