test/fail_compilation/covariance.cx
module covariance;

macro import cx.macros.assert;

class A {
    this() { }
    A get() { return new A; }
}

class C {
    this() { }
}

class B : A {
    this() { }
    override C get() { return new C; }
}

void main() { }
